@@ -5325,4 +5325,9 @@
 	  as well (2013-8-6).
 	* arch/arm/src/sama5/sam_dmac.c and sam34/sam34_dmac.c: Correct
 	  some parameters reversed in function call (2013-8-6).
+	* arch/arm/src/sama5/sam_spi.c:  The SAMA5 SPI driver now supports
+	  DMA transfers (2013-8-9).
+	* arch/arm/src/sama5/sam_dmac.c:  Finally after many bugfixes (the
+	  last being caching issues), the SAMA5 DMA support has been
+	  verified (with SPI) (2013-8-9).
 
